--- a/index.Rmd
+++ b/index.Rmd
@@ -102,14 +102,16 @@ plot_total_spending <- ggplotly(summary_dataset %>%
   ggplot(aes(x = avg_spend_1000, y = reorder(page_name, avg_spend), fill = per_ad_avg_spend_1000)) +
   geom_col() +
   scale_fill_gradient2(
-    low = "#cddae5", 
+    low = "#cddae5",
     mid = "#03457f",
     high = "#023766",
     midpoint = 12,
     limits = c(0, 25)
   ) +
-  scale_x_continuous(breaks = seq(0, 3000, 250),
-                    labels = seq(0, 3000, 250)) +
+  scale_x_continuous(
+    breaks = seq(0, 3000, 250),
+    labels = seq(0, 3000, 250)
+  ) +
   theme_minimal() +
   xlab("Total Spend (CZK thousands)") +
   ylab(element_blank()) +
@@ -135,8 +137,10 @@ plot_total_spending <- ggplotly(summary_dataset %>%
   filter(total_ads > 10) %>%
   ggplot(aes(x = avg_ad_runtime, y = reorder(page_name, avg_ad_runtime))) +
   geom_col(fill = "#026663") +
-  scale_x_continuous(breaks = seq(0, 30, 2),
-                    labels = seq(0, 30, 2)) +
+  scale_x_continuous(
+    breaks = seq(0, 30, 2),
+    labels = seq(0, 30, 2)
+  ) +
   theme_minimal() +
   xlab("Days") +
   ylab(element_blank()) +
@@ -173,8 +177,10 @@ plot_total_impressions <- ggplotly(summary_dataset %>%
     midpoint = 200,
     limits = c(0, 400)
   ) +
-  scale_x_sqrt(breaks = seq(0, 100, 10),
-                    labels = seq(0, 100, 10)) +
+  scale_x_sqrt(
+    breaks = seq(0, 100, 10),
+    labels = seq(0, 100, 10)
+  ) +
   theme_minimal() +
   xlab("Total Impressions (millions)") +
   ylab(element_blank()) +
@@ -212,8 +218,10 @@ plot_total_reach <- ggplotly(summary_dataset %>%
     midpoint = 500,
     limits = c(0, 1000)
   ) +
-  scale_x_sqrt(breaks = seq(0, 5000, 250),
-                     labels = seq(0, 5000, 250)) +
+  scale_x_sqrt(
+    breaks = seq(0, 5000, 250),
+    labels = seq(0, 5000, 250)
+  ) +
   theme_minimal() +
   xlab("Total reach (millions)") +
   ylab(element_blank()) +
@@ -367,24 +375,24 @@ plot_region <- ggplotly(
     select(
       page_name,
       avg_pha,
-      avg_stc, 
-      avg_jhc, 
-      avg_plk, 
-      avg_kvk, 
-      avg_ulk, 
-      avg_lbk, 
+      avg_stc,
+      avg_jhc,
+      avg_plk,
+      avg_kvk,
+      avg_ulk,
+      avg_lbk,
       avg_hkk,
       avg_pak,
       avg_vys,
       avg_jhm,
       avg_olk,
-      avg_msk, 
+      avg_msk,
       avg_zlk
     ) %>%
     pivot_longer(cols = 2:15, names_to = "region_group", values_to = "proportion", values_drop_na = TRUE) %>%
     ggplot(aes(x = region_group, y = proportion, fill = page_name)) +
     geom_col(position = "dodge2") +
-   scale_x_discrete(labels = c("HKK", "JHC", "JHM", "KVK", "LBK", "MSK", "OLK", "PAK", "PHA", "PLK", "STC", "ULK", "VYS", "ZLK")) +
+    scale_x_discrete(labels = c("HKK", "JHC", "JHM", "KVK", "LBK", "MSK", "OLK", "PAK", "PHA", "PLK", "STC", "ULK", "VYS", "ZLK")) +
     scale_fill_brewer(palette = "Paired") +
     scale_y_continuous(
       limits = c(0, 0.5),
@@ -395,7 +403,7 @@ plot_region <- ggplotly(
     theme(legend.title = element_blank()) +
     xlab(element_blank()) +
     ylab(element_blank()) +
-    ggtitle("Proportion of Ads since 1.1.2021 targeting specific age groups")
+    ggtitle("Proportion of Ads since 1.1.2021 targeting specific region")
 )
 
 plot_region
